[package]
name = "password_generator"
version = "0.5.0"
authors = ["Ashley <admin@trapacid.icu>"]
edition = "2018"
license = "WTFPL"
description = "Basic password generator. Can take CLI arguments or a number."
repository = "https://github.com/Trapacid/password_generator.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.7.3"